--- a/video.html
+++ b/video.html
@@ -6,7 +6,7 @@
     <title>Video in iFrame</title>
 </head>
 <body>
-    <iframe id="videoIframe" width="560" height="315" src="{{ video_path }}".replace('/video\//g','') frameborder="0" allowfullscreen></iframe>
+    <iframe id="videoIframe" width="560" height="315" src="{{ video_path }}" frameborder="0" allowfullscreen></iframe>
 
     <script>
         // Get the iframe containing the video
